--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -1463,8 +1463,8 @@ html {
 }
 .ndpi .pi-pro-label svg {
   position: relative;
-  top: 3px;
-  transform: rotate(-18deg);
+  margin-left: 5px;
+  margin-right: 2px !important;
 }
 .ndpi .pi-top-menu-content {
   position: fixed;
