--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1972,9 +1972,11 @@ html {
     margin-bottom: 20px;
   }
 }
+.ndpi .pi-pagination-content {
+  text-align: right;
+}
 .ndpi .pi-pagination {
   display: inline-flex;
-  float: right;
   margin-top: 25px;
 }
 @media screen and (max-width: 450px) {
@@ -2186,6 +2188,19 @@ html {
     margin: 0px 0px 30px !important;
   }
 }
+.ndpi .pi-payment-tab .pi-tab .pi-pro-label {
+  background: rgba(235, 205, 168, 0.4705882353) !important;
+  padding: 2px 8px 2px 7px !important;
+  display: block;
+  font-size: 12px !important;
+  border-radius: 12px !important;
+  margin-top: 10px;
+}
+.ndpi .pi-payment-tab .pi-tab .pi-pro-label svg {
+  top: 5px;
+  display: initial;
+}
+
 .wp-admin.ndpi {
   overflow: hidden;
 }
