--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5049,6 +5049,7 @@ select {
   --pi-bg-color-green: #18954d;
   --pi-bg-color-pearl: #f7f8fa;
   --pi-text-color-black: #000;
+  --pi-text-color-red: #da0f0f;
   --pi-text-color-white: #fff;
   --pi-text-color-orange: #F68A0B;
   --pi-text-color-blue: #4c6fff;
