--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -188,6 +188,7 @@ input:-webkit-autofill:active {
         border: 1px solid #E2E8F0;
         padding: 30px 10px;
         text-align: center;
+        margin-bottom: 30px;
         h4 {
             font-size: 16px;
             font-weight: 500;
