--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -183,16 +183,22 @@ input:-webkit-autofill:active {
 }
 
 .pi-intg-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-gap: 25px;
     .pi-intg-item {
         cursor: pointer;
         border: 1px solid #E2E8F0;
         padding: 30px 10px;
-        text-align: center;
-        margin-bottom: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;  
         h4 {
             font-size: 16px;
             font-weight: 500;
             color: #2D3748;
+            margin-top: 10px;
         }
     }
 }
