--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -194,11 +194,22 @@ input:-webkit-autofill:active {
         flex-direction: column;
         align-items: center;
         justify-content: center;  
+        overflow: hidden;
         h4 {
             font-size: 16px;
             font-weight: 500;
             color: #2D3748;
             margin-top: 10px;
         }
+    }
+}
+@media screen and (max-width: 768px) {
+    .pi-intg-list {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media screen and (max-width: 420px) {
+    .pi-intg-list {
+        grid-template-columns: 1fr;
     }
 }
