--- a/src/js/cpnt/invoice/single/style.scoped.scss
+++ b/src/js/cpnt/invoice/single/style.scoped.scss
@@ -110,6 +110,7 @@
   border: 1px solid var(--pv-border-color-gray);
   border-radius: 4px;
   font-size: 10px;
+  color: #718096;
 }
 .ndpv .pv-add-info-content label {
   padding: 9px 12px 12px 0;
