--- a/src/js/cpnt/welcome/style.scss
+++ b/src/js/cpnt/welcome/style.scss
@@ -34,62 +34,51 @@
   background-color: var(--pv-bg-color-white);
   margin: 80px 0;
 }
-
 .ndpv .pv-welcome-tabs-content {
   position: relative;
 }
-
 .ndpv .pv-welcome-title-content {
   text-align: center;
   margin-bottom: 30px;
 }
-
 .ndpv .pv-welcome-title-content .pv-welcome-title {
   font-weight: 700;
   font-size: 24px;
 }
-
 .ndpv .pv-welcome-title-content .pv-welcome-disc {
   font-size: 14px;
   margin-top: 5px;
 }
-
 .ndpv .pv-container {
   left: 0;
   right: 0;
   margin: auto;
-  max-width: 750px;
+  max-width: 790px;
   border-radius: 50px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 80px 60px 65px;
+  padding: 80px 85px 35px;
 }
-
 .ndpv .pv-container.pv-p-tb {
   padding: 30px 60px 40px;
 }
-
 @media screen and (max-width: 768px) {
   .ndpv .pv-container {
     padding: 30px !important;
   }
 }
-
 @media screen and (max-width: 500px) {
   .ndpv .pv-container {
     padding: 15px;
   }
-
   .ndpv .pv-main-content {
     margin-top: 30px;
     padding: 15px;
   }
 }
-
 .ndpv .pv-logo-content {
   text-align: center;
   margin-bottom: 40px;
 }
-
 .ndpv .pv-buttons.pv-text-center a {
   display: table;
   color: #000;
@@ -99,48 +88,38 @@
   padding: 10px;
   font-weight: 600;
 }
-
 .ndpv #pv-finished .pv-buttons.pv-text-center a:last-child {
   color: var(--pv-text-color-white);
   margin-right: 0;
 }
-
 @media screen and (max-width: 500px) {
   .ndpv #pv-finished .pv-buttons.pv-text-center a {
     margin-bottom: 15px;
   }
 }
-
 .ndpv .pv-welcome-tabs-content #pv-welcome p {
   margin-bottom: 70px;
 }
-
 .ndpv .pv-welcome-tabs-content #pv-finished .pv-sub-title {
   margin-bottom: 45px;
 }
-
 .ndpv .pv-welcome-tabs-content #pv-finished .pv-buttons a {
   padding: 2px 10px;
   font-weight: 600;
   border-radius: 8px;
-  color: #fff;
   cursor: pointer;
   border: none;
   font-size: 14px;
   margin-left: 10px;
   display: inline-block;
-  margin-top: 15px;
 }
-
 .ndpv .pv-welcome-tabs-content #pv-finished .pv-buttons a:first-child {
   margin-left: 0px;
 }
-
 .ndpv .pv-tab-content #pv-brand img {
   text-align: center;
   margin-bottom: 5px;
 }
-
 .ndpv .pv-tab-content #pv-brand .pv-upload {
   font-size: 14px;
   margin-bottom: 60px !important;
@@ -153,7 +132,6 @@
   margin: auto;
   border-radius: 5px;
 }
-
 .ndpv .pv-tab-content #pv-brand input {
   width: 120px;
   font-size: 10px;
@@ -165,9 +143,15 @@
   transform: translateX(-50%);
   opacity: 0;
 }
-
 .ndpv #pv-finished h1 {
   font-weight: 500;
   line-height: 40px;
   margin-top: 20px;
+  font-size: 24px !important;
+  color: #2D3748;
+}
+.ndpv #pv-finished p {
+  color: #4A5568;
+  margin-top: 0;
+  font-size: 14px;
 }
