--- a/src/scss/partial/_list-single.scss
+++ b/src/scss/partial/_list-single.scss
@@ -550,6 +550,8 @@
 .ndpv .pv-note h4 span {
   color: #A0AEC0;
   margin-left: 25px;
+  font-weight: 600;
+  font-size: 14px;
 }
 .ndpv .pv-note p {
   margin-top: 10px;
