--- a/src/js/inv-tmpl/scss/3.scoped.scss
+++ b/src/js/inv-tmpl/scss/3.scoped.scss
@@ -1,43 +1,20 @@
 /* ====template three===*/
 .pv-inv .pv-inv-three .pv-inv-body {
   margin: 0 35px;
-}
-.pv-inv .pv-inv-three .pv-inv-top-shape {
-  padding-bottom: 30px;
   position: relative;
 }
-.pv-inv .pv-inv-three .pv-inv-top-shape .pv-inv-shape1 {
-  width: 170px;
-  position: absolute;
-  top: -2px;
-  z-index: 10;
-  left: -36px;
-}
-.pv-inv .pv-inv-three .pv-inv-top-shape .pv-inv-shape1 svg {
-  fill: var(--pv-inv-primary);
-}
-.pv-inv .pv-inv-three .pv-inv-top-shape .pv-inv-shape2 {
-  position: absolute;
-  top: 8px;
-  left: -36px;
-  z-index: 10;
-}
-.pv-inv .pv-inv-three .pv-inv-top-shape .pv-inv-shape2 svg {
-  fill: var(--pv-inv-primary);
-}
-.pv-inv .pv-inv-three .pv-inv-top-shape .pv-inv-shape3 {
-  width: 187px;
-  height: 187px;
+.pv-inv .pv-inv-three .pv-inv-top-shape {
+  margin-left: -36px;
   position: absolute;
   top: 0;
-  z-index: 0;
-  left: -36px;
 }
-.pv-inv .pv-inv-three .pv-inv-top-shape .pv-inv-shape3 svg {
+.pv-inv .pv-inv-three .pv-inv-top-shape svg {
   fill: var(--pv-inv-primary);
+  color: #E2E8F0;
 }
 .pv-inv .pv-inv-three .pv-inv-title h2 {
   text-align: center;
+  padding-top: 30px;
 }
 .pv-inv .pv-inv-from-logo {
   margin-bottom: 18px;
@@ -52,8 +29,8 @@
   background-color: var(--pv-inv-odd);
 }
 .pv-inv .pv-inv-three .pv-inv-footer-shape {
-  position: absolute;
-  right: 34px;
-  bottom: 0;
   transform: rotate(180deg);
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
