--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -235,3 +235,9 @@ input:-webkit-autofill:active {
         grid-template-columns: 1fr;
     }
 } 
+
+//dashboard
+.pv-settings-subtabs {
+    background: white;
+    border-bottom: 1px solid #E2E8F0;
+}
