--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1668,8 +1668,8 @@ html {
 
 .ndpv .pv-right-content {
   width: 100%;
-  overflow-y: auto;
-  overflow-x: hidden;
+  //overflow-y: auto;
+  //overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100vh;
 }
@@ -2477,7 +2477,7 @@ html {
 }
 
 .wp-admin.ndpv {
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .wp-admin.ndpv a:focus {
