--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1671,7 +1671,7 @@ html {
   //overflow-y: auto;
   //overflow-x: hidden;
   scroll-behavior: smooth;
-  height: 100vh;
+  //height: 100vh;
 }
 
 @media screen and (max-width: 992px) {
@@ -1681,7 +1681,7 @@ html {
 }
 
 .ndpv .pv-right-content .pv-page-title {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   margin-top: 0;
   font-size: 24px;
   font-weight: 700;
@@ -1757,7 +1757,7 @@ html {
 }
 
 .ndpv .pv-breadcrumb {
-  margin-bottom: 18px;
+  margin-bottom: 6px;
   margin-left: -5px;
   display: inline-block;
 }
@@ -5978,7 +5978,7 @@ select {
 --------------------------------------------------------------*/
 .ndpv .pv-left-sidebar {
   width: 280px;
-  background-color: #f7f8fa;
+  //background-color: #f7f8fa;
 }
 
 .ndpv .pv-left-sidebar .pv-logo-content {
@@ -6003,7 +6003,6 @@ select {
   overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100vh;
-  padding-bottom: 50px;
   padding-top: 95px;
 }
 
