--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5684,7 +5684,7 @@ body {
 # button
 --------------------------------------------------------------*/
 .ndpv .pv-btn {
-  padding: 15px 20px;
+  padding: 15px 20px !important;
   font-weight: 600;
   border-radius: 8px;
   color: #fff;
