--- a/src/scss/dashboard.scss
+++ b/src/scss/dashboard.scss
@@ -20,7 +20,7 @@
     max-width: 100% !important;
 } */
 //tiny mce editor
-.tox .tox-tbtn svg { 
+.tox .tox-tbtn svg {
     fill: #4A5568 !important;
 }
 
@@ -43,7 +43,7 @@
     max-width: 200px !important;
     max-height: 80px;
     border-radius: 10px;
-} 
+}
 
 //temporary form css 
 .ndpv .pv-field-logo-wrap {
@@ -124,13 +124,16 @@
 
 .wp-admin.ndpv {
     background-color: #f7f8fa !important;
+
     .pv-left-sidebar,
     .pv-top-menu-content {
         display: none;
     }
+
     .Toastify__toast-container.Toastify__toast-container--top-right {
         top: 3em;
     }
+
     .pv-right-content {
         height: calc(100vh - 30px);
     }
@@ -144,13 +147,31 @@
     .pi-field-multi {
         .pv-badge {
             margin-right: 5px;
+            position: relative;
+
+            b {
+                color: #fff;
+                position: absolute;
+                right: 0;
+                background: #f16063;
+                padding: 1px 5px;
+                border-radius: 0 5px 5px 0;
+                display: none;
+                top: 0;
+                z-index: 9;
+            }
         }
+
+        .pv-badge:hover b {
+            display: block;
+        }
+
         .pv-btn {
             margin-top: 5px;
             border: 1px solid rgba(221, 221, 221, 0.6588235294);
         }
     }
-    
+
 }
 
 //TODO: chrome auto fill bg color, move it to css file
@@ -200,8 +221,9 @@ input:-webkit-autofill:active {
 
 .pv-intg-list {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 25px;
+
     .pv-intg-item {
         position: relative;
         cursor: pointer;
@@ -210,14 +232,16 @@ input:-webkit-autofill:active {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;  
+        justify-content: center;
         overflow: hidden;
+
         h4 {
             font-size: 16px;
             font-weight: 500;
             color: #2D3748;
             margin-top: 10px;
         }
+
         .pv-checked {
             z-index: 99;
             background: var(--pv-bg-color-blue);
@@ -226,24 +250,27 @@ input:-webkit-autofill:active {
             top: 10px;
             right: 10px;
             width: 22px;
-            height: 22px; 
-            border-radius: 50%; 
+            height: 22px;
+            border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
+
             svg {
                 fill: #fff;
             }
         }
     }
 }
+
 @media screen and (max-width: 768px) {
     .pv-intg-list {
         grid-template-columns: 1fr 1fr;
     }
 }
+
 @media screen and (max-width: 420px) {
     .pv-intg-list {
         grid-template-columns: 1fr;
     }
-} 
+}
