--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1082,6 +1082,12 @@ html {
     width: 190% !important;
   }
 
+  @media screen and (max-width: 540px) {
+    .twentytwenty-theme .pv-table-wrap .pv-table {
+      max-width: 190% !important;
+    }
+  }
+
   .ndpv .pv-p-m {
     padding-left: 15px;
     margin-left: -15px;
@@ -1339,13 +1345,6 @@ html {
 
 .ndpv .pv-info-table-content .pv-info-table tbody tr td .pv-field-checkbox {
   margin-bottom: 0;
-}
-
-.pv-import-from-gird {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 125px);
-  justify-content: space-between;
-  margin-bottom: 50px;
 }
 
 .ndpv .pv-info-table-content .pv-info-table tbody tr td input[type=number] {
@@ -1676,7 +1675,6 @@ html {
 .ndpv .pv-right-content {
   width: 100%;
   overflow-y: auto;
-  //overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100vh;
 }
@@ -2009,9 +2007,13 @@ html {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.06);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
   .ndpv .pv-search-bar {
     display: block;
+  }
+
+  .ndpv .pv-search-bar .pv-buttons-group {
+    margin-bottom: 10px;
   }
 }
 
@@ -2026,7 +2028,6 @@ html {
   border: 1px solid rgba(221, 221, 221, 0.6588235294);
   padding: 5px 8px;
   border-radius: 8px;
-  margin-left: 10px;
   cursor: pointer;
 }
 
@@ -2079,10 +2080,10 @@ html {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 820px) {
   .ndpv .pv-medium-search-bar .pv-search-input {
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
 }
 
@@ -2469,22 +2470,13 @@ html {
   }
 }
 
-.ndpv .pv-payment-tab .pv-tab .pv-pro-label {
-  background: rgba(235, 205, 168, 0.4705882353) !important;
-  padding: 2px 8px 2px 7px !important;
-  display: block;
-  font-size: 12px !important;
-  border-radius: 12px !important;
-  margin-top: 10px;
-}
-
-.ndpv .pv-payment-tab .pv-tab .pv-pro-label svg {
+.ndpv .pv-horizontal-tab .pv-tab .pv-pro-label svg {
   top: 5px;
   display: initial;
 }
 
 .wp-admin.ndpv {
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 .wp-admin.ndpv a:focus {
@@ -2493,10 +2485,6 @@ html {
 
 .wp-admin.ndpv .pv-ml-m-70 {
   left: -70px !important;
-}
-
-.wp-admin.ndpv .pv-right-content {
-  overflow-y: inherit;
 }
 
 .wp-admin.ndpv .pv-right-content-data {
@@ -2823,6 +2811,10 @@ html {
   color: #fff !important;
 }
 
+.wp-admin.ndpv .pv-right-content {
+  overflow-y: inherit;
+}
+
 .ndpv .pv-board-content {
   height: calc(100vh - 476px) !important;
 }
@@ -2889,8 +2881,13 @@ ul {
 }
 
 .twentytwenty-theme .pv-table input[type=checkbox] {
+  zoom: 0.8 !important;
+}
+
+.wp-admin.twentytwenty-theme .pv-table input[type=checkbox] {
   zoom: 1.2 !important;
 }
+
 
 .twentytwenty-theme .pv-table tr th:first-child input[type=checkbox] {
   top: 6px;
@@ -2900,10 +2897,6 @@ ul {
   .twentytwenty-theme section {
     padding: 0;
   }
-}
-
-.twentytwenty-theme .pv-settings-horizontal-tab {
-  margin-left: 0;
 }
 
 .twentytwenty-theme .pv-breadcrumb ul li {
@@ -2940,7 +2933,6 @@ ul {
 .twentytwenty-theme .pv-field-checkbox-input input[type=number] {
   height: 33px !important;
 }
-
 
 .twentytwenty-theme .pv-field-checkbox-input input[type=checkbox] {
   margin-right: 15px;
@@ -3214,6 +3206,7 @@ ul {
 }
 
 .ndpv .pv-modal-content .pv-content {
+  overflow: auto;
   padding: 30px 50px 0px;
 }
 
@@ -3592,7 +3585,6 @@ ul {
 .ndpv .pv-modal-sidebar .pv-content {
   padding: 20px 35px 15px;
   height: calc(100vh - 219px);
-  overflow: hidden;
 }
 
 @media screen and (max-width: 992px) {
@@ -4210,7 +4202,6 @@ ul {
 }
 
 .ndpv .pv-accordion-wrapper>li {
-  -webkit-animation: bounceInUp 1s ease both;
   animation: bounceInUp 1s ease both;
 }
 
@@ -4263,25 +4254,25 @@ ul {
   display: block;
 }
 
-.ndpv .pv-payment-tab .pv-tabs {
+.ndpv .pv-horizontal-tab .pv-tabs {
   display: inline-flex;
 }
 
 @media screen and (max-width: 550px) {
-  .ndpv .pv-payment-tab .pv-tabs {
+  .ndpv .pv-horizontal-tab .pv-tabs {
     display: block;
   }
 }
 
-.ndpv .pv-payment-tab [data-tab-content] {
+.ndpv .pv-horizontal-tab [data-tab-content] {
   display: none;
 }
 
-.ndpv .pv-payment-tab .pv-active[data-tab-content] {
+.ndpv .pv-horizontal-tab .pv-active[data-tab-content] {
   display: block;
 }
 
-.ndpv .pv-payment-tab .pv-tab {
+.ndpv .pv-horizontal-tab .pv-tab {
   cursor: pointer;
   padding: 5px 10px;
   margin-right: 25px;
@@ -4290,44 +4281,41 @@ ul {
   font-weight: 500;
   display: flex;
   color: #4A5568;
+  align-items: center;
 }
 
 @media screen and (max-width: 768px) {
-  .ndpv .pv-payment-tab .pv-tab {
+  .ndpv .pv-horizontal-tab .pv-tab {
     margin-right: 10px;
     font-size: 12px;
   }
 }
 
-.ndpv .pv-payment-tab .pv-tab svg {
+.ndpv .pv-horizontal-tab .pv-tab span:first-child {
+  border-radius: 8px;
+  font-size: 18px !important;
+  font-weight: 700 !important;
+  padding: 8px !important;
+  background: #EDF2F7;
+  margin-right: 10px;
+  align-self: center !important;
+}
+
+.ndpv .pv-horizontal-tab .pv-tab span:first-child svg {
   display: block;
   font-size: 12px;
   font-weight: 500;
-  margin: auto;
-  top: 50%;
-  position: relative;
-  transform: translateY(-50%);
 }
 
-.ndpv .pv-payment-tab .pv-tab span {
-  border-radius: 8px;
-  font-size: 18px;
-  font-weight: 700;
-  padding: 8px;
-  background: #EDF2F7;
-  margin-right: 10px;
-}
-
-.ndpv .pv-payment-tab .pv-tab span:last-child {
+.ndpv .pv-horizontal-tab .pv-tab span:last-child {
   align-self: center;
   font-weight: 500;
-  background: none;
   font-size: 16px;
   padding: 0;
 }
 
-.ndpv .pv-payment-tab .pv-tab:hover,
-.ndpv .pv-payment-tab .pv-tab.pv-active {
+.ndpv .pv-horizontal-tab .pv-tab:hover,
+.ndpv .pv-horizontal-tab .pv-tab.pv-active {
   border-bottom: 3px solid var(--pv-bg-color-blue);
 }
 
@@ -4456,34 +4444,6 @@ ul {
 .ndpv .pv-settings-tab .pv-settings-subtabs .pv-subtab.pv-active a {
   color: var(--pv-text-color-blue) !important;
   border-left: none !important;
-}
-
-.ndpv .pv-settings-horizontal-tab {
-  display: flex;
-  margin-bottom: 30px;
-  background-color: #f7f8fa;
-  width: 100%;
-}
-
-.ndpv .pv-settings-horizontal-tab .pv-tab {
-  position: relative;
-  padding: 15px 20px;
-  font-size: 14px;
-  font-weight: 500;
-  border-bottom: 3px solid #f7f8fa;
-  color: #718096;
-  cursor: pointer;
-  margin: 0;
-}
-
-.ndpv .pv-settings-horizontal-tab .pv-tab.pv-active {
-  border-bottom: 3px solid var(--pv-bg-color-blue);
-  color: var(--pv-bg-color-blue);
-}
-
-.ndpv .pv-settings-horizontal-tab .pv-tab:hover {
-  border-bottom: 3px solid var(--pv-bg-color-blue);
-  color: var(--pv-bg-color-blue);
 }
 
 .pv-form-accordion {
@@ -4635,7 +4595,6 @@ ul {
 
 .pv-form-accordion.pv-additional .pv-tab {
   padding-bottom: 5px !important;
-  // margin-top: -23px !important;
 }
 
 .pv-form-accordion.pv-additional .pv-tab input[type=checkbox] {
@@ -4830,7 +4789,6 @@ ul {
   background-color: #fff;
   width: 100%;
   border-radius: 8px;
-  border: 1px solid rgba(221, 221, 221, 0.6588235294);
 }
 
 .ndpv .pv-horizontal-tab .pv-tab-content {
@@ -5743,12 +5701,6 @@ select {
   margin-bottom: 20px;
 }
 
-.pv-import-from-gird {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 125px);
-  justify-content: space-between;
-}
-
 .ndpv .pv-form-style-one .row>div:nth-child(odd) {
   margin-right: 30px;
 }
@@ -5990,6 +5942,7 @@ select {
 --------------------------------------------------------------*/
 .ndpv .pv-left-sidebar {
   width: 280px;
+  background-color: #f7f8fa;
 }
 
 .ndpv .pv-left-sidebar .pv-logo-content {
@@ -6014,6 +5967,7 @@ select {
   overflow-x: hidden;
   scroll-behavior: smooth;
   height: 100vh;
+  padding-bottom: 50px;
   padding-top: 95px;
 }
 
